--- a/models/rmutt_model1/config.json
+++ b/models/rmutt_model1/config.json
@@ -17,6 +17,9 @@
     "model_description": "This is a model for RMUTT CPE Arm Robot that can classify 10 classes of objects.",
     "config":{
         "image_width": 1280,
-        "image_height": 720
+        "image_height": 720,
+        "min_conf_threshold": 0.5,
+        "input_mean": 127.5,
+        "input_std": 127.5
     }
 }
