--- a/models/rmutt_model2/config.json
+++ b/models/rmutt_model2/config.json
@@ -18,6 +18,7 @@
     "config":{
         "image_width": 1280,
         "image_height": 720,
+        "frame_rate": 30,
         "min_conf_threshold": 0.5,
         "input_mean": 127.5,
         "input_std": 127.5
