--- a/models/rmutt_model1/config.json
+++ b/models/rmutt_model1/config.json
@@ -4,16 +4,19 @@
     "model_author": "RMUTT CPE",
     "model_file": "rmutt_model.tflite",
     "model_classes": [
-        "Gun",
-        "Triangle",
-        "toy_Car"
+        "Red_Triangle",
+        "Blue_Triangle",
+        "White_Square",
+        "Red_Square",
+        "White_Cylinder",
+        "Blue_Cylinder"
 
     ],
     "model_description": "This is a model for RMUTT CPE Arm Robot that can classify 10 classes of objects.",
     "config":{
-        "image_width": 1280,
-        "image_height": 720,
-        "min_conf_threshold": 0.5,
+        "image_width": 640,
+        "image_height": 640,
+        "min_conf_threshold": 0.85,
         "input_mean": 127.5,
         "input_std": 127.5,
         "framerate": 30
