--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -7,6 +7,7 @@
     "servo_max_degree" : "180",
     "servo_min_degree" : "0",
     "conveyor_count" : "1",
+    "no_camera_image" : "app/assets/images/no_cam.jpg",
     "allowed_posture": [
         [
             {
