--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -37,6 +37,37 @@
             }
         ]
     ],
+    "automatic_step":{
+        "step0" : [
+            "reset"
+        ],
+        "step1" : [
+
+        ],
+        "step2" : [
+            "liftUp"
+        ],
+        "step3" : [
+            "moveConv"
+        ],
+        "step4" : [
+            "stopConv"
+        ],
+        "step5" : [
+
+        ]
+    },
+    "grab_step":{
+        "grab1" : [
+            "pregetA","getA"
+        ],
+        "grab2" : [
+            "preGetB","getB"
+        ],
+        "grab3" : [
+            "preGetC","getC"
+        ]
+    },
     "instructions": {
         "reset": {
             "step": [
@@ -53,7 +84,7 @@
                 "S00D080", "S01D075", "S02D030", "S03D050", "S04D000", "S05D090"
             ]
         },
-        "dropA": {
+        "dropA": { 
             "step": [
                 "S00D180", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
             ]
@@ -68,7 +99,7 @@
                 "S00D112", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
             ]
         },
-        "pregetA": {
+        "pregetA": {  
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D040"
             ]
@@ -85,7 +116,7 @@
         },
         "getA": {
             "step": [
-                "S00D180", "S01D080", "S02D000", "S03D050", "S04D000", "S05D090"
+                "S00D180", "S01D080", "S02D000", "S03D060", "S04D000", "S05D090"
             ]
         },
         "getB": {
@@ -100,17 +131,17 @@
         },
         "postGetA": {
             "step": [
-                "S00D180", "S01D080", "S02D000", "S03D050", "S04D000", "S05D040"
+                "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
         "postGetB": {
             "step": [
-                "S00D137", "S01D080", "S02D000", "S03D050", "S04D000", "S05D040"
+                "S00D137", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
         "postGetC": {
             "step": [
-                "S00D112", "S01D080", "S02D000", "S03D050", "S04D000", "S05D040"
+                "S00D112", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
         "prePreDropBelt": {
@@ -133,10 +164,20 @@
                 "S05D090"
             ]
         },
-        "open":{
+        "ungrip":{
             "step": [
                 "S05D045"
             ]
+        },
+        "moveConv":{
+            "step": [
+                "C0M1S255", "C1M1S255"
+            ]
+        },
+        "stopConv":{
+            "step": [
+                "C0M0S000", "C1M0S000"
+            ]
         }
-        }
+    }
 }
