Co-authored-by: Tanagid Rakwongrit <SpicyHydrogen@users.noreply.github.com> Co-authored-by: Nicezki <Nicezki@users.noreply.github.com>

--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -42,30 +42,19 @@
             "reset"
         ],
         "step1" : [
-
+            "preGrip"
         ],
         "step2" : [
             "liftUp"
         ],
         "step3" : [
-            "moveConv"
+            "dropA"
         ],
         "step4" : [
-            "stopConv"
+            "pregetA"
         ],
         "step5" : [
-
-        ]
-    },
-    "grab_step":{
-        "grab1" : [
-            "pregetA","getA"
-        ],
-        "grab2" : [
-            "preGetB","getB"
-        ],
-        "grab3" : [
-            "preGetC","getC"
+            "getA"
         ]
     },
     "instructions": {
@@ -85,6 +74,7 @@
             ]
         },
         "dropA": { 
+        "dropA": { 
             "step": [
                 "S00D180", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
             ]
@@ -99,6 +89,7 @@
                 "S00D112", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
             ]
         },
+        "pregetA": {  
         "pregetA": {  
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D040"
@@ -117,6 +108,7 @@
         "getA": {
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D060", "S04D000", "S05D090"
+                "S00D180", "S01D080", "S02D000", "S03D060", "S04D000", "S05D090"
             ]
         },
         "getB": {
@@ -132,15 +124,18 @@
         "postGetA": {
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
+                "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
         "postGetB": {
             "step": [
                 "S00D137", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
+                "S00D137", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
         "postGetC": {
             "step": [
+                "S00D112", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
                 "S00D112", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
@@ -165,6 +160,7 @@
             ]
         },
         "ungrip":{
+        "ungrip":{
             "step": [
                 "S05D045"
             ]
@@ -179,5 +175,6 @@
                 "C0M0S000", "C1M0S000"
             ]
         }
+    }
     }
 }
