Revert "Co-authored-by: Tanagid Rakwongrit <SpicyHydrogen@users.noreply.github.com>"
This reverts commit eaf68129174d0110bde376eb53cfd4ec6d28a4b7.

--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -42,19 +42,30 @@
             "reset"
         ],
         "step1" : [
-            "preGrip"
+
         ],
         "step2" : [
             "liftUp"
         ],
         "step3" : [
-            "dropA"
+            "moveConv"
         ],
         "step4" : [
-            "pregetA"
+            "stopConv"
         ],
         "step5" : [
-            "getA"
+
+        ]
+    },
+    "grab_step":{
+        "grab1" : [
+            "pregetA","getA"
+        ],
+        "grab2" : [
+            "preGetB","getB"
+        ],
+        "grab3" : [
+            "preGetC","getC"
         ]
     },
     "instructions": {
@@ -74,7 +85,6 @@
             ]
         },
         "dropA": { 
-        "dropA": { 
             "step": [
                 "S00D180", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
             ]
@@ -89,7 +99,6 @@
                 "S00D112", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
             ]
         },
-        "pregetA": {  
         "pregetA": {  
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D040"
@@ -108,7 +117,6 @@
         "getA": {
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D060", "S04D000", "S05D090"
-                "S00D180", "S01D080", "S02D000", "S03D060", "S04D000", "S05D090"
             ]
         },
         "getB": {
@@ -124,18 +132,15 @@
         "postGetA": {
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
-                "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
         "postGetB": {
             "step": [
                 "S00D137", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
-                "S00D137", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
         "postGetC": {
             "step": [
-                "S00D112", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
                 "S00D112", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
             ]
         },
@@ -160,7 +165,6 @@
             ]
         },
         "ungrip":{
-        "ungrip":{
             "step": [
                 "S05D045"
             ]
@@ -175,6 +179,5 @@
                 "C0M0S000", "C1M0S000"
             ]
         }
-    }
     }
 }
