--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -42,36 +42,52 @@
             "reset"
         ],
         "step1" : [
-
+            "grab_step"
         ],
         "step2" : [
-            "liftUp"
+            "prePreDropBelt", "preDropBelt", "dropBelt", "postDropBelt"
         ],
         "step3" : [
-            "moveConv"
+            "moveConv", "delay11", "stopConv"
         ],
         "step4" : [
-            "stopConv"
+            "prePreGrip"
         ],
         "step5" : [
-
+            "preGrip", "grip", "liftUp", "drop_step"
+        ]
+    },
+    "drop_step":{
+        "drop1" : [
+            "dropA", "postDrop"
+        ],
+        "drop2" : [
+            "dropB", "postDrop"
+        ],
+        "drop3" : [
+            "dropC", "postDrop"
         ]
     },
     "grab_step":{
         "grab1" : [
-            "pregetA","getA"
+            "preGetA","getA","postGetA"
         ],
         "grab2" : [
-            "preGetB","getB"
+            "preGetB","getB","postGetB"
         ],
         "grab3" : [
-            "preGetC","getC"
+            "preGetC","getC","postGetC"
         ]
     },
     "instructions": {
         "reset": {
             "step": [
                 "C0M1S255", "C1M1S255", "S05D045", "S04D000", "S03D075", "S02D080", "S01D020", "S01D075", "S00D080"
+            ]
+        },
+        "prePreGrip": {
+            "step": [
+                "S00D080", "S01D075", "S02D020", "S03D060", "S04D000", "S05D040"
             ]
         },
         "preGrip": {
@@ -81,37 +97,42 @@
         },
         "liftUp": {
             "step": [
-                "S00D080", "S01D075", "S02D030", "S03D050", "S04D000", "S05D090"
+                "S00D080", "S01D075", "S02D030", "S03D070", "S04D000", "S05D090"
             ]
         },
         "dropA": { 
             "step": [
-                "S00D180", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
+                "S00D180", "S01D055", "S02D030", "S03D075", "S04D000", "S05D040"
             ]
         },
         "dropB": {
             "step": [
-                "S00D137", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
+                "S00D142", "S01D055", "S02D030", "S03D075", "S04D000", "S05D040"
             ]
         },
         "dropC": {
             "step": [
-                "S00D112", "S01D055", "S02D030", "S03D075", "S04D080", "S05D040"
+                "S00D123", "S01D055", "S02D030", "S03D075", "S04D000", "S05D040"
             ]
         },
-        "pregetA": {  
+        "postDrop": {
+            "step": [
+                "S02D040", "S03D080"
+            ]
+        },
+        "preGetA": {  
             "step": [
                 "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D040"
             ]
         },
         "preGetB": {
             "step": [
-                "S00D137", "S01D080", "S02D000", "S03D080", "S04D000", "S05D040"
+                "S00D142", "S01D080", "S02D000", "S03D080", "S04D000", "S05D040"
             ]
         },
         "preGetC": {
             "step": [
-                "S00D112", "S01D080", "S02D000", "S03D080", "S04D000", "S05D040"
+                "S00D123", "S01D080", "S02D040", "S03D080", "S04D000", "S05D040"
             ]
         },
         "getA": {
@@ -121,27 +142,27 @@
         },
         "getB": {
             "step": [
-                "S00D137", "S01D080", "S02D000", "S03D050", "S04D000", "S05D090"
+                "S00D142", "S01D076", "S02D000", "S03D061", "S04D000", "S05D090"
             ]
         },
         "getC": {
             "step": [
-                "S00D112", "S01D080", "S02D000", "S03D050", "S04D000", "S05D090"
+                "S03D032", "S00D123", "S01D055", "S02D036", "S04D000", "S05D090"
             ]
         },
         "postGetA": {
             "step": [
-                "S00D180", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
+                "S03D080"
             ]
         },
         "postGetB": {
             "step": [
-                "S00D137", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
+                "S03D080"
             ]
         },
         "postGetC": {
             "step": [
-                "S00D112", "S01D080", "S02D000", "S03D080", "S04D000", "S05D090"
+                "S01D080","S03D060"
             ]
         },
         "prePreDropBelt": {
@@ -151,12 +172,17 @@
         },
         "preDropBelt": {
             "step": [
-                "S05D090", "S04D000", "S03D080", "S02D030", "S01D051", "S00D000"
+                "S05D090", "S04D000", "S03D080", "S02D015", "S01D070", "S00D000"
             ]
         },
         "dropBelt": {
             "step": [
-                "S05D040", "S04D000", "S03D080", "S02D030", "S01D051", "S00D000"
+                "S05D040", "S04D000", "S03D080", "S02D012", "S01D070", "S00D000"
+            ]
+        },
+        "postDropBelt": {
+            "step": [
+                "S05D040", "S04D000", "S03D080", "S02D020", "S01D070", "S00D000"
             ]
         },
         "grip":{
