--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -46,7 +46,7 @@
             "grab_step"
         ],
         "step2" : [
-            "prePreDropBelt", "preDropBelt", "dropBelt", "postDropBelt"
+            "prePreDropBelt", "delay11","preDropBelt", "delay11","dropBelt", "delay11","postDropBelt"
         ],
         "step3" : [
             "moveConv", "delay11", "stopConv"
@@ -70,20 +70,20 @@
         ]
     },
     "grab_step":{
+        "grab0" : [
+            "preGetA","delay20","getA","delay20","postGetA"
+        ],
         "grab1" : [
-            "preGetA","getA","postGetA"
+            "preGetB","delay10","getB","delay10","postGetB"
         ],
         "grab2" : [
-            "preGetB","getB","postGetB"
-        ],
-        "grab3" : [
-            "preGetC","getC","postGetC"
+            "preGetC","delay10","getC","delay10","postGetC"
         ]
     },
     "instructions": {
         "reset": {
             "step": [
-                "C0M1S255", "C1M1S255", "S05D045", "S04D000", "S03D075", "S02D080", "S01D020", "S01D075", "S00D080"
+                "S05D045", "S04D000", "S03D075", "S02D080", "S01D020", "S01D075", "S00D080"
             ]
         },
         "prePreGrip": {
