--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -3,6 +3,8 @@
     "model_folder": "models",
     "current_model": "rmutt_model1",
     "serial_buadrate": "115200",
+    "servo_step" : "1",
+    "servo_delay" : "100",
     "servo_count" : "5",
     "servo_max_degree" : "180",
     "servo_min_degree" : "0",
@@ -74,7 +76,7 @@
     },
     "grab_step":{
         "grab0" : [
-            "preGetA","delay8","getA","delay8","postGetA"
+            "preGetA","getA","postGetA"
         ],
         "grab1" : [
             "preGetB","delay8","getB","delay8","postGetB"
