--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -51,7 +51,7 @@
             "prePreDropBelt", "delay1", "preDropBelt", "delay1", "dropBelt", "delay1", "postDropBelt"
         ],
         "step3" : [
-            "moveConvTop", "delay1", "stopConvTop"
+            "moveConvTop", "delay3", "stopConvTop"
         ],
         "step4" : [
             "moveConvBottom"
@@ -66,7 +66,7 @@
             "reverseConvBottom", "delay1", "stopConvBottom"
         ],
         "step4.4" : [
-            "moveConvBottomSlow", "gateClose", "delay3", "stopConvBottom", "gateOpen"
+            "moveConvBottom", "gateClose", "delay3", "stopConvBottom", "gateOpen"
         ],
         "step5" : [
             "preGrip", "delay1", "grip", "delay1", "liftUp", "delay1"
