Co-authored-by: Tanagid Rakwongrit <SpicyHydrogen@users.noreply.github.com>

--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -75,7 +75,7 @@
             "moveConvBottom", "gateClose", "delay3", "stopConvBottom", "gateOpen"
         ],
         "step5" : [
-            "preGrip", "delay1", "grip", "delay1", "liftUp", "delay1"
+            "moveToConv", "preSweep", "sweep", "gripFromConv", "postGripFromConv"
         ]
     },
     "drop_step":{
@@ -103,92 +103,77 @@
     "instructions": {
         "reset": {
             "step": [
-                "S05D045", "S04D008", "S03D075", "S02D080", "S01D075", "S00D080"
-            ]
-        },
-        "prePreGrip": {
-            "step": [
-                "S00D092", "S01D075", "S02D020", "S03D060", "S04D008", "S05D040"
-            ]
-        },
-        "preGrip": {
-            "step": [
-                "S00D080", "S01D075", "S02D020", "S03D030", "S04D008", "S05D040"
-            ]
-        },
-        "liftUp": {
-            "step": [
-                "S00D080", "S01D075", "S02D030", "S03D070", "S04D008", "S05D090"
+                "S05D045", "S04D000", "S03D075", "S02D080", "S01D075", "S00D080"
             ]
         },
         "dropA": { 
             "step": [
-                "S00D180", "S01D055", "S02D030", "S03D075", "S04D008", "S05D040"
+                "S00D180", "S02D010", "S03D080", "S01D080", "S04D000", "S05D040"
             ]
         },
         "dropB": {
             "step": [
-                "S00D142", "S01D055", "S02D030", "S03D075", "S04D008", "S05D040"
+                "S00D144", "S02D010", "S03D080", "S01D080", "S04D000", "S05D040"
             ]
         },
         "dropC": {
             "step": [ 
-                "S00D124", "S01D055", "S02D030", "S03D075", "S04D008", "S05D040"
+                "S00D124", "S02D010", "S03D080", "S01D080", "S04D000", "S05D040"
             ]
         },
         "postDrop": {
             "step": [
-                "S02D040", "S03D080"
+                "S01D110", "S02D010", "S03D030", "S04D000", "S05D040"
             ]
         },
         "preGetA": {  
             "step": [
-                "S00D180", "S01D080", "S02D020", "S03D080", "S04D008", "S05D040"
+                "S00D180", "S01D080", "S02D020", "S03D055", "S04D008", "S05D040"
             ]
         },
         "preGetB": {
             "step": [
-                "S00D142", "S01D080", "S02D020", "S03D080", "S04D008", "S05D000"
+                "S00D144", "S01D080", "S02D020", "S03D055", "S04D006", "S05D040"
             ]
         },
         "preGetC": {
             "step": [
-                "S00D124", "S01D080", "S02D040", "S03D080", "S04D008", "S05D000"
+                "S00D124", "S01D080", "S02D040", "S03D080", "S04D000", "S05D040"
             ]
         },
         "getA": {
             "step": [
-                "S00D180",  "S02D010", "S03D045", "S04D008", "S01D075", "S05D090"
+                "S00D180", "S02D016", "S03D038", "S04D008", "S01D073", "S05D090"
             ]
         },
         "getB": {
             "step": [
-                "S03D038", "S00D142",  "S01D065", "S02D025",  "S04D008", "S05D090"
+                "S00D144", "S01D080", "S02D010", "S02D000", "S03D055", "S04D006", "S05D090"
             ]
         },
         "getC": {
             "step": [
-                "S03D036", "S00D124","S02D032", "S01D070", "S01D063", "S01D058",  "S04D008", "S05D090"
+                "S03D032", "S00D124","S02D026", "S01D070", "S01D065",  "S04D000", "S05D090"
             ]
         },
         "postGetA": {
             "step": [
-                "S00D180", "S01D110", "S02D010", "S03D030", "S04D008", "S05D090"
+                "S00D180", "S01D110", "S02D010", "S03D030", "S04D000", "S05D090"
             ]
         },
         "postGetB": {
             "step": [
-                "S03D080", "S00D142", "S02D025",  "S01D065",  "S04D008", "S05D090"
+                "S00D144", "S01D110", "S02D010", "S03D030", "S04D000", "S05D090"
             ]
         },
         "postGetC": {
             "step": [
-                "S01D080", "S03D060", "S00D124", "S02D032", "S04D008", "S05D090"
+                "S00D124", "S01D110", "S02D010", "S03D030", "S04D000", "S05D090"
             ]
         },
         "preDropBelt": {
             "step": [
-                "S00D006", "S02D020", "S03D090", "S01D090", "S01D070", "S01D060", "S01D060"
+                "S00D000", "S02D020", "S03D090", "S01D090", "S01D070", "S01D060"
             ]
         },
         "dropBelt": {
@@ -199,6 +184,31 @@
         "postDropBelt": {
             "step": [
                 "S01D90", "S03D030", "S01D110" , "S02D020"
+            ]
+        },
+        "moveToConv": {
+            "step": [
+                "S00D082", "S01D110", "S02D010", "S03D030", "S04D008", "S05D040"
+            ]
+        },
+        "preSweep": {
+            "step": [
+                "S00D082", "S05D090", "S04D000", "S03D050", "S02D030", "S01D065"
+            ]
+        },
+        "sweep": {
+            "step": [
+                "S00D082", "S05D090", "S04D000", "S03D040", "S02D040", "S03D020", "S01D065"
+            ]
+        },
+        "gripFromConv": {
+            "step": [
+                "S00D082", "S04D000", "S02D060","S05D045", "S03D005", "S02D048", "S05D090"
+            ]
+        },
+        "postGripFromConv": {
+            "step": [
+                "S00D82", "S01D110", "S02D010", "S03D030", "S04D008", "S05D090"
             ]
         },
         "grip":{
