Add server api endpoint to set item in the box

--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -9,6 +9,8 @@
     "servo_max_degree" : "180",
     "servo_min_degree" : "0",
     "conveyor_count" : "1",
+    "box_count" : "3",
+    "item_max_count" : "9",
     "no_camera_image" : "app/assets/images/no_cam.jpg",
     "pause_camera_image" : "app/assets/images/wait_cam.jpg",
     "allowed_posture": [
