--- a/userdata/config/config.json
+++ b/userdata/config/config.json
@@ -42,6 +42,37 @@
             }
         ]
     ],
+    "servo_test" :{
+        "servo0" : [
+            "S00D080", "S00D050", "S00D080", "S00D120", "S00D080"
+        ],
+        "servo1" : [
+            "S01D075", "S01D060", "S01D075"
+        ],
+        "servo2" : [
+            "S02D080", "S02D060", "S02D080"
+        ],
+        "servo3" : [
+            "S03D075", "S03D050", "S03D075"
+        ],
+        "servo4" : [
+            "S04D000", "S04D045", "S04D000"
+        ],
+        "servo5" : [
+            "S05D090", "S05D040", "S05D090"
+        ],
+        "servo6" : [
+            "S06D000", "S06D090", "S06D000"
+        ]
+    },
+    "conv_test" :{
+        "conv0" : [
+            "C0M1S255", "C0M1S255","C0M1S255", "C0M2S255", "C0M2S255","C0M2S255", "C0M0S000"
+        ],
+        "conv1" : [
+            "C1M1S255", "C1M1S255","C1M1S255", "C1M2S255", "C1M2S255","C1M2S255", "C1M0S000"
+        ]
+    },
     "automatic_step":{
         "step0" : [
             "reset"
@@ -125,22 +156,22 @@
         },
         "postDrop": {
             "step": [
-                "S01D90", "S01D110", "S02D010", "S03D010", "S04D000", "S05D040"
+                "S01D90",  "S02D010", "S03D010", "S01D110", "S04D000", "S05D040"
             ]
         },
         "preGetA": {  
             "step": [
-                "S00D180", "S03D055", "S04D008","S02D020", "S01D080",  "S05D040"
+                "S00D180", "S03D055", "S04D008","S02D020", "S01D080",  "S05D030"
             ]
         },
         "preGetB": {
             "step": [
-                "S00D144",  "S03D055", "S04D006", "S02D020" ,"S01D080", "S05D040"
+                "S00D144",  "S03D055", "S04D006", "S02D020" ,"S01D080", "S05D030"
             ]
         },
         "preGetC": {
             "step": [
-                "S00D124",  "S03D036", "S04D000", "S02D040", "S01D080", "S05D040"
+                "S00D124",  "S03D036", "S04D000", "S02D040", "S01D080", "S05D030"
             ]
         },
         "getA": {
@@ -175,7 +206,7 @@
         },
         "preDropBelt": {
             "step": [
-                "S00D000", "S02D020", "S03D090", "S01D090", "S01D070", "S01D060"
+                "S00D000", "S02D020",  "S01D090", "S03D060", "S01D080", "S03D090", "S01D070", "S01D062"
             ]
         },
         "dropBelt": {
